deployment-strategies/ab-strategy/app-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: v1
  template:
    metadata:
      labels:
        app: my-app
        version: v1
    spec:
      containers:
        - name: app-v1
          image: nginx:1.14.2
          ports:
            - containerPort: 80
