deployment-strategies/ab-strategy/app-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: v2
  template:
    metadata:
      labels:
        app: my-app
        version: v2
    spec:
      containers:
        - name: app-v2
          image: nginx:1.16.0
          ports:
            - containerPort: 80
