deployment-strategies/ab-strategy/destinationrule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app-destinationrule
spec:
  host: app-service
  subsets:
    - name: v1
      labels:
        app: my-app
        version: v1
    - name: v2
      labels:
        app: my-app
        version: v2
