deployment-strategies/ab-strategy/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-virtualservice
spec:
  hosts:
    - "app-ab.com" # Or your external domain name
  http:
    - route:
        - destination:
            host: app-service
            subset: v1
          weight: 100
        - destination:
            host: app-service
            subset: v2
          weight: 0
